--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
       <link rel="manifest" href="/manifest.json" />
 
       <title>Naber - Administra más con menos</title>
+      <link
+         rel="stylesheet"
+         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+         crossorigin="anonymous"
+      />
    </head>
    <body>
       <div id="root"></div>
